--- a/dubbo-demo/dubbo-demo-consumer/src/test/resources/dubbo.properties
+++ b/dubbo-demo/dubbo-demo-consumer/src/test/resources/dubbo.properties
@@ -17,7 +17,9 @@ dubbo.container=log4j,spring
 dubbo.application.name=demo-consumer
 dubbo.application.owner=
 #dubbo.registry.address=multicast://224.5.6.7:1234
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.protocol=zookeeper
+#dubbo.registry.address=zookeeper1.dihuo.online:2181,zookeeper2.dihuo.online:2181,zookeeper3.dihuo.online:2181
+dubbo.registry.address=127.0.0.1:2181
 #dubbo.registry.address=redis://127.0.0.1:6379
 #dubbo.registry.address=dubbo://127.0.0.1:9090
 #dubbo.monitor.protocol=registry
