--- a/dubbo-maven/pom.xml
+++ b/dubbo-maven/pom.xml
@@ -23,7 +23,7 @@
 	</parent>
 	<groupId>com.alibaba</groupId>
 	<artifactId>dubbo</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Dubbo</name>
 	<description>Dubbo is a distributed service framework enpowers applications with service import/export capability with high performance RPC.</description>
