--- a/dubbo-remoting/dubbo-remoting-p2p/pom.xml
+++ b/dubbo-remoting/dubbo-remoting-p2p/pom.xml
@@ -19,8 +19,7 @@
 	<parent>
 		<groupId>com.alibaba</groupId>
 		<artifactId>dubbo-remoting</artifactId>
-		<version>3.0.0</version>
-	</parent>
+	<version>3.0.0</version>	</parent>
 	<artifactId>dubbo-remoting-p2p</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
