--- a/dubbo-remoting/pom.xml
+++ b/dubbo-remoting/pom.xml
@@ -18,8 +18,7 @@
 	<parent>
 		<groupId>com.alibaba</groupId>
 		<artifactId>dubbo-parent</artifactId>
-		<version>3.0.0</version>
-	</parent>
+	<version>3.0.0</version>	</parent>
 	<artifactId>dubbo-remoting</artifactId>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
