--- a/dubbo-test/dubbo-test-compatibility/pom.xml
+++ b/dubbo-test/dubbo-test-compatibility/pom.xml
@@ -19,8 +19,7 @@
 	<parent>
 		<groupId>com.alibaba</groupId>
 		<artifactId>dubbo-test</artifactId>
-		<version>3.0.0</version>
-	</parent>
+	<version>3.0.0</version>	</parent>
 	<artifactId>dubbo-test-compatibility</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
