--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
 	<modelVersion>4.0.0</modelVersion>
     <groupId>com.alibaba</groupId>
 	<artifactId>dubbo-parent</artifactId>
-	<version>3.0.0</version>
-	<packaging>pom</packaging>
+<version>3.0.0</version>	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
 	<description>The parent project of dubbo</description>
 	<url>http://code.alibabatech.com/wiki/display/dubbo</url>
@@ -392,82 +391,82 @@
 					<useSystemClassLoader>true</useSystemClassLoader>
 					<forkMode>once</forkMode>
 					<argLine>${argline}</argLine>
-					<systemProperties>
-						<!-- common shared -->
-						<property>
-							<name>transporter</name>
-							<value>${transporter}</value>
-						</property>
-						<property>
-							<name>serialization</name>
-							<value>${serialization}</value>
-						</property>
-						<!-- server side -->
-						<property>
-							<name>port</name>
-							<value>${port}</value>
-						</property>
-						<property>
-							<name>threadpool</name>
-							<value>${threadpool}</value>
-						</property>
-						<property>
-							<name>threads</name>
-							<value>${threads}</value>
-						</property>
-						<property>
-							<name>iothreads</name>
-							<value>${iothreads}</value>
-						</property>
-						<!-- client side -->
-						<property>
-							<name>server</name>
-							<value>${server}</value>
-						</property>
-						<property>
-							<name>timeout</name>
-							<value>${timeout}</value>
-						</property>
-						<property>
-							<name>length</name>
-							<value>${length}</value>
-						</property>
-						<property>
-							<name>connections</name>
-							<value>${connections}</value>
-						</property>
-						<property>
-							<name>base</name>
-							<value>${base}</value>
-						</property>
-						<property>
-							<name>concurrent</name>
-							<value>${concurrent}</value>
-						</property>
-						<property>
-							<name>runs</name>
-							<value>${runs}</value>
-						</property>
-						<property>
-							<name>onerror</name>
-							<value>${onerror}</value>
-						</property>
-					</systemProperties>
+					<!--<systemProperties>-->
+						<!--&lt;!&ndash; common shared &ndash;&gt;-->
+						<!--<property>-->
+							<!--<name>transporter</name>-->
+							<!--<value>${transporter}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>serialization</name>-->
+							<!--<value>${serialization}</value>-->
+						<!--</property>-->
+						<!--&lt;!&ndash; server side &ndash;&gt;-->
+						<!--<property>-->
+							<!--<name>port</name>-->
+							<!--<value>${port}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>threadpool</name>-->
+							<!--<value>${threadpool}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>threads</name>-->
+							<!--<value>${threads}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>iothreads</name>-->
+							<!--<value>${iothreads}</value>-->
+						<!--</property>-->
+						<!--&lt;!&ndash; client side &ndash;&gt;-->
+						<!--<property>-->
+							<!--<name>server</name>-->
+							<!--<value>${server}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>timeout</name>-->
+							<!--<value>${timeout}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>length</name>-->
+							<!--<value>${length}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>connections</name>-->
+							<!--<value>${connections}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>base</name>-->
+							<!--<value>${base}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>concurrent</name>-->
+							<!--<value>${concurrent}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>runs</name>-->
+							<!--<value>${runs}</value>-->
+						<!--</property>-->
+						<!--<property>-->
+							<!--<name>onerror</name>-->
+							<!--<value>${onerror}</value>-->
+						<!--</property>-->
+					<!--</systemProperties>-->
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<skip>${skip_maven_deploy}</skip>
-				</configuration>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-deploy-plugin</artifactId>-->
+				<!--<configuration>-->
+					<!--<skip>${skip_maven_deploy}</skip>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 
 			<!-- 打包源码 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>2.4</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
